# erebus-gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client-version.h.in
include/erebus-gui/: erebus-gui.hpp  exceptionutil.hpp  plugin.hpp  qvariantconverter.hpp  settings.hpp  waitcursor.hpp
src/client/: CMakeLists.txt  application.cpp  application.hpp  appsettings.hpp  endpoints.hpp  erebus.manifest  erebus.rc  main.cpp  pluginlist.hpp  pluginmgr.cpp  pluginmgr.hpp  settings.hpp
src/client/application/: application.cpp  application.hpp  applicationbase.cpp  applicationbase.hpp  messageclient.cpp  messageclient.hpp  messageserver.cpp  messageserver.hpp  sharedsection.hpp
src/client/connectdlg/: connectdlg.cpp  connectdlg.hpp  connectdlg.ui
src/client/mainwindow/: logview.cpp  logview.hpp  mainmenu.hpp  mainwindow.cpp  mainwindow.hpp  trayicon.hpp
src/client/plugindlg/: plugindlg.cpp  plugindlg.hpp  plugindlg.ui
src/erebus-gui/: CMakeLists.txt  errorbox.cpp  errorbox.hpp  errorbox.ui  exceptionutil.cpp
src/erebus-iconcache/: CMakeLists.txt  iconcache.cpp  iconcache.hpp  log.cpp  log.hpp  main.cpp  server.cpp  server.hpp
src/erebus-processmgr/: CMakeLists.txt  columnsdlg.cpp  columnsdlg.hpp  columnsdlg.ui  iconcache.cpp  iconcache.hpp  itemmenu.cpp  itemmenu.hpp  posixresult.hpp  processcolumns.cpp  processcolumns.hpp  processdlg.cpp  processdlg.hpp  processdlg.ui  processinfo.cpp  processinfo.hpp  processlist.cpp  processlist.hpp  processmgr.cpp  processmgr.hpp  processstub.cpp  processstub.hpp  processtab.cpp  processtab.hpp  proclistworker.cpp  proclistworker.hpp  proctreemodel.cpp  proctreemodel.hpp  settings.hpp
